# TAI-Project-1

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  benchmarks.md
scripts/: run_arithmetic_encoder_1.sh  run_arithmetic_encoder_2.sh
src/coder/: arithmetic_encoder_1.cpp  arithmetic_encoder_2.cpp  g3_v1_c.cpp  g3_v1_d.cpp  g3_v2_c.cpp  g3_v2_d.cpp
